--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-codemod": "^5.4.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0"
   },
